[gd_scene load_steps=3 format=3 uid="uid://bpqj8sd324401"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_p61e4"]
[ext_resource type="Resource" uid="uid://v33amwqicruq" path="res://levels/Level1.tres" id="2_lqujd"]

[node name="Mainmenu" type="PanelContainer" node_paths=PackedStringArray("LevelLabel")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p61e4")
LevelList = Array[Resource("res://levels/level_data.gd")]([ExtResource("2_lqujd")])
LevelLabel = NodePath("VBoxContainer/HBoxContainer/ColorRect2/RichTextLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(0.121569, 0.203922, 0.509804, 1)

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "<"

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
color = Color(0.254902, 0.282353, 0.309804, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Level 1[/center]"
fit_content = true

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(0.121569, 0.203922, 0.509804, 1)

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = ">"

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
color = Color(0.121569, 0.203922, 0.509804, 1)

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ColorRect/MenuButton" to="." method="_on_prev"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ColorRect3/MenuButton" to="." method="_on_next"]
[connection signal="pressed" from="VBoxContainer/ColorRect3/MenuButton" to="." method="_on_start"]
